<resources>
    <string name="app_name" translatable="false">SET</string>

    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="unknown_player" translatable="false">unknown</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_exit">exit</string>
    <string name="text_backpress">Tap the Back button one more time to exit</string>

    <string name="main_btn_time" translatable="false">Time Attack Mode</string>
    <string name="main_btn_vs">VS Mode</string>
    <string name="main_btn_how" translatable="false">How To Play</string>
    <string name="main_btn_rank">Rank (Time Attack Mode)</string>

    <string name="timeattack_text_end">End!</string>
    <string name="timeattack_text_score">Score</string>
    <string name="timeattack_text_hint">Hint</string>
    <string name="timeattack_text_result" translatable="false">Your Score is</string>
    <string name="timeattack_text_register">Register</string>
    <string name="timeattack_text_name">Input name</string>

    <string name="ninecard_number_1" translatable="false">1</string>
    <string name="ninecard_number_2" translatable="false">2</string>
    <string name="ninecard_number_3" translatable="false">3</string>
    <string name="ninecard_number_4" translatable="false">4</string>
    <string name="ninecard_number_5" translatable="false">5</string>
    <string name="ninecard_number_6" translatable="false">6</string>
    <string name="ninecard_number_7" translatable="false">7</string>
    <string name="ninecard_number_8" translatable="false">8</string>
    <string name="ninecard_number_9" translatable="false">9</string>

    <string name="rank_text_title">RANK</string>
    <string name="rank_text_rank">Rank</string>
    <string name="rank_text_name">Name</string>
    <string name="rank_text_score">Score</string>
    <string name="rank_text_date">Date</string>


    <string name="vs_text_stage" translatable="false">Stage</string>
    <string name="vs_text_player" translatable="false">Player</string>
    <string name="vs_text_player_dialog_title">Insert player name</string>
    <string name="vs_text_player_hint">name</string>
    <string name="vs_text_score">Score</string>
    <string name="vs_text_title_start">Select Start</string>
    <string name="vs_text_dialog_title">Result</string>
    <string name="vs_text_dialog_win_postfix">Win!</string>
    <string name="vs_text_dialog_draw">Draw!</string>
    <string name="vs_text_dialog_pass_title">Pass stage</string>
    <string name="vs_text_dialog_pass_desc">Show all answer and end stage.</string>
    <string name="vs_text_dialog_pass_ok">Show answer</string>
    <string name="vs_text_pass_guide">Tap the Next button to pass next stage</string>
    <string name="vs_btn_set">Set</string>
    <string name="vs_btn_complete">Complete</string>
    <string name="vs_btn_start">Start</string>
    <string name="vs_btn_pass">Show answer</string>
    <string name="vs_btn_next">Next</string>

    <string name="help_timeattack_title">\n\n* Time Attack Mode (Easy / Hard)</string>
    <string name="help_timeattack_description">"- Find SET only one exist in nine cards while 1 minute!\n- If succeed to find SET, get +3 score. Then shows new nine cards.\n"</string>
    <string name="help_timeattack_hint">"- Tip. Select \'Hint\' button to show card(s) of SET.\n"</string>
    <string name="help_timeattack_score_title">[Score table]</string>
    <string name="help_timeattack_score_info">"- When succeed to find SET. (+3)\n- When succeed to find SET with one time selected Hint. (+1)\n- With more than two times selected Hint. (0)\n"</string>

    <string name="help_vs_title">* VS Mode</string>
    <string name="help_vs_description">"- Find all of SET in nine cards while 10 stages!\n- If find set, select \'Set\' button to pick three cards.\n- If there is no more remained SET, select \'Complete\' button.\n"</string>
    <string name="help_vs_hint">"-Tip1. Player who succeeded to find set, get chance to select \'Complete\' while 2 seconds.\n- Tip2. If all player is hard to find all set, select \'Show Answer\' button. It will shows remain SET(s) and stage is ended. Select to \'Next\' to pass next stage.\n"</string>
    <string name="help_vs_score_title">[Score table]</string>
    <string name="help_vs_score_info_plus">"- If find valid SET. (+1)\n- If select \'Complete\' when all SET is found. (+3)"</string>
    <string name="help_vs_score_info_minus">"- Invalid SET. (-1)\n- Already found SET. (-1)\n- Timeout. (-1)\n- Fail to \'Complete\' (-1)\n"</string>

    <string name="help_about_set_title">* SET basic rules</string>
    <string name="help_about_set_description">"- A card consist of three attributes and each attribute has three types\n (Color, Shape, Inner filter)\n"</string>
    <string name="help_about_set_color">Colors</string>
    <string name="help_about_set_shape">Shapes</string>
    <string name="help_about_set_filter">Inner filters</string>
    <string name="help_about_set_pattern_desc">"\n - SET means each attributes are all same or each different.\nAvailable patterns are below seven ways.\n"</string>

    <string name="help_set_1">1. Different Colors / Same Shape / Same Filter</string>
    <string name="help_set_2">\n2. Same Color / Different Shapes / Same Filter</string>
    <string name="help_set_3">\n3. Same Color / Same Shape / Different Filters</string>
    <string name="help_set_4">\n4. Different Colors / Different Shapes / Same Filter</string>
    <string name="help_set_5">\n5. Different Colors / Same Shape / Different Filters</string>
    <string name="help_set_6">\n6. Same Color / Different Shapes / Different Filters</string>
    <string name="help_set_7">\n7. Different Colors / Different Shapes / Different Filters</string>

</resources>
