<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.kania.set2.ui.NineCardFragment">

    <LinearLayout
        style="@style/nineCardLayoutRowStyle">

        <RelativeLayout
            android:id="@+id/ninecard_layout_card1"
            style="@style/nineCardCardLayoutStyle">
            <ImageView
                android:id="@+id/ninecard_image_card1"
                style="@style/nineCardCardImageStyle"/>
            <TextView
                android:id="@+id/ninecard_text_num_card1"
                style="@style/nineCardCardNumberStyle"
                android:text="@string/ninecard_number_1"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ninecard_layout_card2"
            style="@style/nineCardCardLayoutStyle">
            <ImageView
                android:id="@+id/ninecard_image_card2"
                style="@style/nineCardCardImageStyle"/>
            <TextView
                android:id="@+id/ninecard_text_num_card2"
                style="@style/nineCardCardNumberStyle"
                android:text="@string/ninecard_number_2"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ninecard_layout_card3"
            style="@style/nineCardCardLayoutStyle">
            <ImageView
                android:id="@+id/ninecard_image_card3"
                style="@style/nineCardCardImageStyle"/>
            <TextView
                android:id="@+id/ninecard_text_num_card3"
                style="@style/nineCardCardNumberStyle"
                android:text="@string/ninecard_number_3"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/nineCardLayoutRowStyle">

        <RelativeLayout
            android:id="@+id/ninecard_layout_card4"
            style="@style/nineCardCardLayoutStyle">
            <ImageView
                android:id="@+id/ninecard_image_card4"
                style="@style/nineCardCardImageStyle"/>
            <TextView
                android:id="@+id/ninecard_text_num_card4"
                style="@style/nineCardCardNumberStyle"
                android:text="@string/ninecard_number_4"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ninecard_layout_card5"
            style="@style/nineCardCardLayoutStyle">
            <ImageView
                android:id="@+id/ninecard_image_card5"
                style="@style/nineCardCardImageStyle"/>
            <TextView
                android:id="@+id/ninecard_text_num_card5"
                style="@style/nineCardCardNumberStyle"
                android:text="@string/ninecard_number_5"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ninecard_layout_card6"
            style="@style/nineCardCardLayoutStyle">
            <ImageView
                android:id="@+id/ninecard_image_card6"
                style="@style/nineCardCardImageStyle"/>
            <TextView
                android:id="@+id/ninecard_text_num_card6"
                style="@style/nineCardCardNumberStyle"
                android:text="@string/ninecard_number_6"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/nineCardLayoutRowStyle">

        <RelativeLayout
            android:id="@+id/ninecard_layout_card7"
            style="@style/nineCardCardLayoutStyle">
            <ImageView
                android:id="@+id/ninecard_image_card7"
                style="@style/nineCardCardImageStyle"/>
            <TextView
                android:id="@+id/ninecard_text_num_card7"
                style="@style/nineCardCardNumberStyle"
                android:text="@string/ninecard_number_7"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ninecard_layout_card8"
            style="@style/nineCardCardLayoutStyle">
            <ImageView
                android:id="@+id/ninecard_image_card8"
                style="@style/nineCardCardImageStyle"/>
            <TextView
                android:id="@+id/ninecard_text_num_card8"
                style="@style/nineCardCardNumberStyle"
                android:text="@string/ninecard_number_8"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ninecard_layout_card9"
            style="@style/nineCardCardLayoutStyle">
            <ImageView
                android:id="@+id/ninecard_image_card9"
                style="@style/nineCardCardImageStyle"/>
            <TextView
                android:id="@+id/ninecard_text_num_card9"
                style="@style/nineCardCardNumberStyle"
                android:text="@string/ninecard_number_9"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
