<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/vs_player_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/vs_player_btn_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/vs_btn_set"/>
        <Button
            android:id="@+id/vs_player_btn_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="0dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/vs_btn_complete"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/vs_player_layout_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/vs_player_layout_buttons">
        <TextView
            android:id="@+id/vs_player_text_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/vs_text_score"/>
        <TextView
            android:id="@+id/vs_player_text_score_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/vs_player_text_score"
            android:layout_centerVertical="true"
            android:text="+"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/vs_player_text_remain_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/vs_player_layout_score"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"/>

    <Button
        android:id="@+id/vs_player_btn_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/vs_player_text_remain_time"
        android:text="@string/vs_text_player"/>


</RelativeLayout>