<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_timeattack_set_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/base_white"
    tools:context="com.kania.set2.ui.TimeAttackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <FrameLayout
                    android:id="@+id/timeattack_container_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

                <LinearLayout
                    android:id="@+id/timeattack_layout_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/timeattack_text_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="end game"/>
                    <Button
                        android:id="@+id/timeattack_btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timeattack_text_register"/>
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/timeattack_layout_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                    <TextView
                        android:id="@+id/timeattack_text_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/timeattack_text_score"/>
                    <TextView
                        android:id="@+id/timeattack_text_plus_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/timeattack_text_score"
                        android:layout_centerVertical="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/answer_red"
                        android:text=""/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/timeattack_text_remain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/timeattack_layout_score"
                    android:layout_centerHorizontal="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="remain time"/>

                <Button
                    android:id="@+id/timeattack_btn_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/timeattack_text_hint"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/timeattack_container_ninecard"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
